正常停止和重启flume